--- a/css/main.css
+++ b/css/main.css
@@ -8,13 +8,13 @@ html {
     box-sizing: inherit; /* keep */
 }
 body {
-    font-family: sans-serif;
+    font-family: "Noto Serif", 'Hoefler Text', 'Palatino', sans-serif;
     background: #5598b2; /* keep */
     color: #333; /* keep */
     margin: 0; /* keep */
 }
 h1, h2 {
-    font-family: serif;
+    font-family: "Raleway", 'Optima', 'Century Gothic', sans-serif
 }
 #tagline {
     font-style: italic;
@@ -38,10 +38,15 @@ img {
     margin: auto; /* keep */
     display: grid; /* keep */
     grid-template-columns: repeat(5, 1fr);
-    grid-template-rows: repeat(2, auto);
+    grid-template-rows: repeat(7, auto);
     grid-template-areas:
-        "header arial georgia pairing bobwhite-quail"
-        "readability line-length helvetica typeface footer";
+        "header header header header header"
+        "pairing pairing pairing arial georgia"
+        "bobwhite-quail bobwhite-quail readability readability readability"
+        "bobwhite-quail bobwhite-quail line-length line-length line-length"
+        "typeface typeface typeface helvetica helvetica"
+        "typeface typeface typeface . ."
+        "footer footer footer footer footer";
 }
 
 /* all grid items -
@@ -53,43 +58,62 @@ img {
 header {
     grid-area: header; /* keep */
     background: #fff; /* keep */
+    text-align: center;
+    font-size: 1.3rem;
+
 }
 #arial {
     grid-area: arial; /* keep */
-    background: #a8e8ff; /* keep */
+    background: #a8e8ff;
+    padding: 40px;
 }
 #georgia {
     grid-area: georgia; /* keep */
     background: #a8e8ff; /* keep */
+    padding: 40px;
 }
 #pairing {
     grid-area: pairing; /* keep */
     background: #a8e8ff; /* keep */
+    padding: 40px;
+    margin: 0;
+    font-size: 1.2rem;
+
 }
 #bobwhite-quail {
     grid-area: bobwhite-quail; /* keep */
     background: #d2f4ff; /* keep */
+    padding: 40px;
+
 }
 #readability {
     grid-area: readability; /* keep */
     background: #d2f4ff; /* keep */
+    padding-right: 40px;
+    padding-top: 30px;
 }
 #line-length {
     grid-area: line-length; /* keep */
     background: #d2f4ff; /* keep */
+    padding-right: 40px;
 }
 #helvetica {
     grid-area: helvetica; /* keep */
     background: #fff; /* keep */
+    padding: 40px;
+    margin: 40px;
 }
 #typeface {
     grid-area: typeface; /* keep */
     color: #d2f4ff; /* keep */
     background: #5598b2; /* keep */
+    padding: 20px;
+    text-shadow: .1em .1em #666;
 }
 footer {
     grid-area: footer; /* keep */
     background: #b2988a; /* keep */
+    text-align: center;
 }
 
 /* end of all 10 grid items */
@@ -104,4 +128,60 @@ a:hover {
     text-decoration: none; /* keep */
 }
 
+#typeface a {
+  text-shadow: none;
+}
 /* media queries below - only 1 is needed */
+
+@media screen and (max-width: 700px){
+#container {
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(11, auto);
+    grid-template-areas:
+        "header header"
+        "arial georgia"
+        "pairing pairing"
+        "bobwhite-quail bobwhite-quail"
+        "readability readability"
+        "line-length line-length"
+        "helvetica helvetica"
+        "typeface typeface"
+        "typeface typeface"
+        "typeface typeface"
+        "footer footer";
+}
+
+#readability{
+  padding: 20px;
+}
+
+#line-length{
+  padding: 20px;
+}
+
+#helvetica{
+  margin:0px;
+}
+
+#arial{
+  padding: 20px;
+}
+
+#georgia{
+  padding: 20px;
+}
+
+#pairing{
+  padding: 20px;
+}
+
+#bobwhite-quail{
+  padding: 20px;
+}
+header{
+  padding: 20px;
+}
+header img{
+  display: none;
+}
+}
